--- a/ShadowTestInterface/EquasionTestInterface.csproj
+++ b/ShadowTestInterface/EquasionTestInterface.csproj
@@ -53,10 +53,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Line.cs" />
+    <Compile Include="Equation.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
